[package]
name = "swiftdrop"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.3", features = ["bluetoothd", "l2cap"] }
dirs = "6"
indicatif = { version = "0.17" }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
] }
tokio-stream = { version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha256 = { version = "1.6" }
uuid = "1"
xz2 = { version = "0.1", features = ["tokio"] }

## logging
env_logger = "0.11"
log = "0.4"
